--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
    <head>
       <meta charset = "UTF-8">
-      <title>React App</title>
+      <title>Jitsi Metric Dashboard</title>
    </head>
 
    <body>
